--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,6 @@ h1 {
     padding-right: 40%;
     padding-left: 2%;
     padding-bottom: 1%;
-    padding-top: 1%;
     text-decoration: none;
 }
 
@@ -40,10 +39,12 @@ a:link, a:visited {
 
 
 .nav {
+  text-align: end;
   float:inline-end;
   padding-right: 2%;
   font-size: 20px;
   line-height: 1;
+  white-space: nowrap;
 
 }
 
@@ -90,6 +91,7 @@ p {
     font-size: 1.5rem;
     padding-bottom: 2%;
     padding-top: 2%;
+    white-space: nowrap;
   }
 
   .blue-highlight { 
@@ -159,9 +161,67 @@ p {
   align-items: center;
   overflow: hidden;
 }
-.fill img {
-  width: 1100px;
-  height: 300px;
-  object-fit: contain;
+
+
+.btn {
+  border: none;
+  text-decoration: none;
+  background-color: white;
+  float:right;
+  padding-bottom: 2%;
+  padding-right: 1%;
+  font-optical-sizing: 48; 
+  white-space: nowrap;
+  text-align: center;
 }
 
+.bounce {
+  animation: bounce 2s infinite;
+}
+
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-30px);
+  }
+  60% {
+    transform: translateY(-15px);
+  }
+}
+
+.r {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 4px;
+}
+
+/* Create four equal columns that sits next to each other */
+.c {
+  flex: 25%;
+  max-width: 25%;
+  padding: 0 4px;
+}
+
+.c img {
+  margin-top: 8px;
+  vertical-align: middle;
+  width: 100%;
+}
+
+/* Responsive layout - makes a two column-layout instead of four columns */
+@media screen and (max-width: 800px) {
+  .column {
+    flex: 50%;
+    max-width: 50%;
+  }
+}
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .column {
+    flex: 100%;
+    max-width: 100%;
+  }
+}
