--- a/styles.css
+++ b/styles.css
@@ -194,14 +194,15 @@ p {
 .r {
   display: flex;
   flex-wrap: wrap;
-  padding: 0 4px;
+  text-align: center;
 }
 
 /* Create four equal columns that sits next to each other */
 .c {
   flex: 25%;
-  max-width: 25%;
+  max-width: 50%;
   padding: 0 4px;
+  text-align: center;
 }
 
 .c img {
@@ -210,18 +211,3 @@ p {
   width: 100%;
 }
 
-/* Responsive layout - makes a two column-layout instead of four columns */
-@media screen and (max-width: 800px) {
-  .column {
-    flex: 50%;
-    max-width: 50%;
-  }
-}
-
-/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 600px) {
-  .column {
-    flex: 100%;
-    max-width: 100%;
-  }
-}
