--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,6 +13,34 @@ mine
 
 */
 
+.container {
+	margin: 50px;
+    align-items: center;
+    justify-content: center;
+	content: flex;
+	
+	justify-content: center;
+	-webkit-column-break-inside: avoid;
+          page-break-inside: avoid;
+               break-inside: avoid;
+
+
+			   vertical-align: middle;
+
+			   
+
+
+
+  }
+  
+  
+  .text {
+    font-size: 20px;
+    padding-left: 20px;
+    padding-top: 20%;
+    float: right;
+  }
+
 	.displayimg {
 		display: inline-block;
 			border-radius: 100%;
@@ -399,8 +427,8 @@ input, select, textarea {
 
 	.threecolumn {
 		float: left;
-		width: 33.33%;
-		padding: 5px;
+		width: 50%;
+		padding: 50px;
 	}
 
 	/* Clear floats after image containers */
@@ -3301,9 +3329,8 @@ input, select, textarea {
 /* Nav */
 
 		.nav1 {
-			padding-top: 25px;
 			padding-right: 25px;
-			padding-bottom: 25px;
+			padding-top: 10px;
 			text-decoration: none;
 			border-bottom: none;
 			float: right; 
